Avances: Se empezo a crear el backend del sistema, pasando de ser meramente visual a implementar por fin funcionalidad a la pagina

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,7 +4,9 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "Sarria\\Backend\\": "src/"
+            "MVC\\": "src/",
+            "Model\\": "model/",
+            "Controllers\\": "controller/"
         }
     },
     "authors": [
