--- a/backend/composer.json
+++ b/backend/composer.json
@@ -4,9 +4,10 @@
     "type": "project",
     "autoload": {
         "psr-4": {
-            "MVC\\": "src/",
-            "Model\\": "model/",
-            "Controllers\\": "controller/"
+            "MVC\\": "./",
+            "Model\\": "./model/",
+            "Controllers\\": "./controllers/",
+            "Classes\\": "./classes/"
         }
     },
     "authors": [
@@ -15,5 +16,9 @@
             "email": "reysabueso256@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "firebase/php-jwt": "^6.4",
+        "phpmailer/phpmailer": "^6.8",
+        "vlucas/phpdotenv": "^5.5"
+    }
 }
