--- a/backend/composer.json
+++ b/backend/composer.json
@@ -19,6 +19,7 @@
     "require": {
         "firebase/php-jwt": "^6.4",
         "phpmailer/phpmailer": "^6.8",
-        "vlucas/phpdotenv": "^5.5"
+        "vlucas/phpdotenv": "^5.5",
+        "intervention/image": "^2.7"
     }
 }
