--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,7 +13,7 @@
     "authors": [
         {
             "name": "Kevin Sarria",
-            "email": "reysabueso256@gmail.com"
+            "email": "camilo.bravo.2050@gmail.com"
         }
     ],
     "require": {
